<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_update_black_24dp"
        app:showAsAction="always"
        android:title="@string/menu_refresh"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_tune_black_24dp"
        app:showAsAction="always"
        android:visible="false"
        android:title="@string/filter">

        <menu>

            <item
                android:id="@+id/filter_date"
                android:title="@string/menu_title_new_first" />

            <item
                android:id="@+id/filter_alpha"
                android:title="@string/menu_title_alphabet_first" />
        </menu>
    </item>
</menu>