<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_recalls">

    <fragment
        android:id="@+id/navigation_recalls"
        android:name="com.khair.appforitis.presentation.main.recalls.RecallListFragment"
        android:label="@string/title_recalls"
        tools:layout="@layout/fragment_recall_list" />

    <fragment
        android:id="@+id/navigation_companies"
        android:name="com.khair.appforitis.presentation.main.companies.CompanyListFragment"
        android:label="@string/title_companies"
        tools:layout="@layout/fragment_company_list" />

    <fragment
        android:id="@+id/navigation_vacancies"
        android:name="com.khair.appforitis.presentation.main.vacancies.VacancyListFragment"
        android:label="@string/title_vacancies"
        tools:layout="@layout/fragment_vacancy_list" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.khair.appforitis.presentation.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/activity_profile"/>

</navigation>