<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.company.CompanyActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_company_information"
        app:navigationIcon="@drawable/ic_navigate_before_on_primary_24dp"
        tools:layout_editor_absoluteX="0dp"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_company_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textStyle="bold"
                    tools:text="@string/temp_company_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_company_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:drawableStartCompat="@drawable/ic_place_black_24dp"
                    tools:text="@string/temp_address" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_company_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:drawableStartCompat="@drawable/ic_link_black_24dp"
                    tools:text="@string/temp_site" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_company_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:drawableStartCompat="@drawable/ic_phone_black_24dp"
                    tools:text="@string/temp_phone" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/tv_company_rating_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/label_rating_with_colon"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <TextView
                        android:id="@+id/tv_company_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/tv_company_rating_label"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="@string/temp_rating" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RatingBar
                        android:id="@+id/rb_company_rating"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:numStars="5"
                        tools:rating="3" />

                    <TextView
                        android:id="@+id/tv_recalls_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/rb_company_rating"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="@string/temp_recalls_count" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_information_with_colon"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_company_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    tools:text="@string/temp_lorem_ipsum" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_recalls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_show_recalls" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>