<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".presentation.companycreation.CompanyCreationActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_company_creation"
        app:navigationIcon="@drawable/ic_navigate_before_on_primary_24dp"
        tools:layout_editor_absoluteX="0dp"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_company_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="145dp"
                        android:layout_height="163dp"
                        app:srcCompat="@drawable/company"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Компания"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="center_horizontal"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="48dp"
                        android:gravity="center_horizontal"
                        android:text="Добавьте компанию, которой нет в списке."
                        android:layout_gravity="center_horizontal"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="32dp"
                        android:id="@+id/til_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name_with_colon"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_company_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="@string/temp_company_name" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/label_address_with_colon"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_company_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="@string/temp_address" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/label_site_with_colon"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_company_site"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="@string/temp_site" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/label_phone_number_with_colon"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_company_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="@string/temp_phone" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_company_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/label_information_with_colon"
                        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_company_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:inputType="textMultiLine"
                            android:maxLines="100"
                            android:minLines="6"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            tools:text="@string/temp_lorem_ipsum" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_create_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/action_create" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="?attr/colorPrimary"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>