<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_recall_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    app:rippleColor="@color/light_blue_for_ripple"
    app:cardCornerRadius="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/tv_student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="@string/temp_student_name" />

        <RelativeLayout
            android:id="@+id/rl_company_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_student_name">

            <TextView
                android:id="@+id/tv_company_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textColor="?android:textColorSecondary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:text="@string/label_company_with_colon" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/tv_company_name_label"
                android:textColor="?android:textColorSecondary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                tools:text="@string/temp_company_name" />
        </RelativeLayout>

        <RatingBar
            android:id="@+id/rb_company_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/rl_company_container"
            android:numStars="5"
            style="@style/Widget.AppCompat.RatingBar.Small"
            tools:rating="3"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rb_company_rating"
            android:layout_alignParentStart="true"
            tools:text="@string/temp_vacancy_date" />
    </RelativeLayout>

<!--    <View-->
<!--        android:layout_gravity="bottom"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:background="@color/dark_gray_background"-->
<!--        />-->

</com.google.android.material.card.MaterialCardView>